testdata/invalid/interleave_invalid_11.lisp
;;error:4:22-23:invalid source column
(defcolumns (X :i16))
(defconst Y 1)
(definterleaved Z (X Y))
